Prevent long links from stretching the page in mobile view

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -263,6 +263,7 @@
     }
 
     a {
+        word-wrap: break-word;
         text-decoration: underline;
 
         &:hover {
